# todo

./: Makefile  TODO  docker-compose.yml
admin_panel/: Dockerfile  pyproject.toml
admin_panel/todo/: admin.py  models.py  settings.py
admin_panel/todo/management/commands/: populate_local_db.py
admin_panel/todo/migrations/: 0001_initial.py  0002_rename_task_list_task_list.py
server/: .gitignore  Dockerfile  pyproject.toml
server/tests/: conftest.py  constants.py  factories.py  test_task_lists.py  test_tasks.py
server/todo/: __main__.py  app.py  database.py  models.py  settings.py
server/todo/api/: __init__.py  router.py  task_lists.py  tasks.py
server/todo/schemes/: __init__.py  base.py  task_lists.py  tasks.py
server/todo/services/: __init__.py  base.py  task_lists.py  tasks.py
